<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lokasi_tempat"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lokasi_value"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#112233"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fajar"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fajar_value"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#112233"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subuh"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_subuh_value"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#112233"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dhuhur"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dhuhur_value"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#112233"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ashar"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ashar_value"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#112233"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/maghrib"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_maghrib_value"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#112233"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/isya"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_isya_value"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#112233"/>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/tab_refresh"
        android:src="@drawable/ic_refresh_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>